fix countdown z-index

--- a/assets/component-countdown.css
+++ b/assets/component-countdown.css
@@ -5,7 +5,7 @@
 .countdown-section {
 	position: sticky;
 	top: 61px;
-	z-index: 4;
+	z-index: 2;
 }
 
 .announce-countdown {
